@@ -6,9 +6,7 @@ import com.ugent.pidgeon.model.json.TestJson;
 import com.ugent.pidgeon.postgre.models.*;
 import com.ugent.pidgeon.postgre.models.types.UserRole;
 import com.ugent.pidgeon.postgre.repository.*;
-import com.ugent.pidgeon.util.Filehandler;
-import com.ugent.pidgeon.util.Permission;
-import com.ugent.pidgeon.util.PermissionHandler;
+import com.ugent.pidgeon.util.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.Resource;
 import org.springframework.http.*;
@@ -19,7 +17,6 @@ import java.nio.file.Path;
 
 import java.util.Optional;
 import java.util.function.Function;
-import java.util.logging.Logger;
 
 @RestController
 public class TestController {
@@ -30,12 +27,15 @@ public class TestController {
     private FileRepository fileRepository;
     @Autowired
     private TestRepository testRepository;
+
     @Autowired
-    private FileController fileController;
+    private TestUtil testUtil;
     @Autowired
-    private CourseRepository courseRepository;
+    private FileUtil fileUtil;
     @Autowired
-    private CourseUserRepository courseUserRepository;
+    private CommonDatabaseActions commonDatabaseActions;
+    @Autowired
+    private EntityToJsonConverter entityToJsonConverter;
 
     /**
      * Function to update the tests of a project
@@ -92,48 +92,33 @@ public class TestController {
             MultipartFile structureTest,
             HttpMethod httpMethod
     ) {
-        ProjectEntity projectEntity = projectRepository.findById(projectId).orElse(null);
-        if (projectEntity == null) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Project not found");
-        }
 
-        if(!projectRepository.adminOfProject(projectId, user.getId()) && user.getRole() != UserRole.admin){
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).body("You don't have acces to update the tests of this project");
+        CheckResult<Pair<TestEntity, ProjectEntity>> checkResult = testUtil.checkForTestUpdate(projectId, user, dockerImage, dockerTest, structureTest, httpMethod);
+        if (!checkResult.getStatus().equals(HttpStatus.OK)) {
+            return ResponseEntity.status(checkResult.getStatus()).body(checkResult.getMessage());
         }
-
-        if (httpMethod.equals(HttpMethod.POST) && projectEntity.getTestId() != null) {
-            return ResponseEntity.status(HttpStatus.CONFLICT).body("Tests already exist for this project");
-        }
-
-        if (!httpMethod.equals(HttpMethod.PATCH)) {
-            if (dockerImage == null || dockerTest == null || structureTest == null) {
-                return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Missing parameters: dockerimage (string), dockertest (file), structuretest (file) are required");
-            }
-        }
+        TestEntity testEntity = checkResult.getData().getFirst();
+        ProjectEntity projectEntity = checkResult.getData().getSecond();
 
         try {
-            // Get test entity
-            Optional<TestEntity> testEntityOptional = testRepository.findByProjectId(projectId);
-            if (testEntityOptional.isEmpty() && !httpMethod.equals(HttpMethod.POST)) {
-                return ResponseEntity.status(HttpStatus.NOT_FOUND).body("No tests found for project with id: " + projectId);
-            }
+
             // Save the files on server
-            Long dockertestFileEntityId;
-            Long structuretestFileEntityId;
+            long dockertestFileEntityId;
+            long structuretestFileEntityId;
             if (dockerTest != null) {
                 Path dockerTestPath = Filehandler.saveTest(dockerTest, projectId);
-                FileEntity dockertestFileEntity = saveFileEntity(dockerTestPath, projectId, user.getId());
+                FileEntity dockertestFileEntity = fileUtil.saveFileEntity(dockerTestPath, projectId, user.getId());
                 dockertestFileEntityId = dockertestFileEntity.getId();
             } else {
-                dockertestFileEntityId = testEntityOptional.get().getDockerTestId();
+                dockertestFileEntityId = testEntity.getDockerTestId();
             }
 
             if (structureTest != null) {
                 Path structureTestPath = Filehandler.saveTest(structureTest, projectId);
-                FileEntity structuretestFileEntity = saveFileEntity(structureTestPath, projectId, user.getId());
+                FileEntity structuretestFileEntity = fileUtil.saveFileEntity(structureTestPath, projectId, user.getId());
                 structuretestFileEntityId = structuretestFileEntity.getId();
             } else {
-                structuretestFileEntityId = testEntityOptional.get().getStructureTestId();
+                structuretestFileEntityId = testEntity.getStructureTestId();
             }
 
             // Create/update test entity
@@ -141,20 +126,13 @@ public class TestController {
             test = testRepository.save(test);
             projectEntity.setTestId(test.getId());
             projectRepository.save(projectEntity);
-            return ResponseEntity.ok(entityToTestJson(test, projectId));
+            return ResponseEntity.ok(entityToJsonConverter.testEntityToTestJson(test, projectId));
         } catch (IOException e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Error while saving files: " + e.getMessage());
         }
     }
 
-    // Hulpfunctie om de tests correct op de database te zetten
-    private FileEntity saveFileEntity(Path filePath, long projectId, long userId) throws IOException {
-        // Save the file entity to the database
-        Logger.getGlobal().info("file path: " + filePath.toString());
-        Logger.getGlobal().info("file name: " + filePath.getFileName().toString());
-        FileEntity fileEntity = new FileEntity(filePath.getFileName().toString(), filePath.toString(), userId);
-        return fileRepository.save(fileEntity);
-    }
+
 
     /**
      * Function to get the tests of a project
@@ -169,27 +147,13 @@ public class TestController {
     @GetMapping(ApiRoutes.PROJECT_BASE_PATH + "/{projectid}/tests")
     @Roles({UserRole.teacher, UserRole.student})
     public ResponseEntity<?> getTests(@PathVariable("projectid") long projectId, Auth auth) {
-        long userId = auth.getUserEntity().getId();
-        if (!projectRepository.adminOfProject(projectId, userId) && auth.getUserEntity().getRole() != UserRole.admin){
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).body("You aren't part of this project");
+        CheckResult<TestEntity> projectCheck = testUtil.getTestIfAdmin(projectId, auth.getUserEntity());
+        if (!projectCheck.getStatus().equals(HttpStatus.OK)) {
+            return ResponseEntity.status(projectCheck.getStatus()).body(projectCheck.getMessage());
         }
-        Optional<TestEntity> testEntity = testRepository.findByProjectId(projectId);
-        if (testEntity.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("No tests found for project with id: " + projectId);
-        }
-        TestEntity test = testEntity.get();
-        TestJson res  = entityToTestJson(test, projectId);
+        TestEntity test = projectCheck.getData();
+        TestJson res  = entityToJsonConverter.testEntityToTestJson(test, projectId);
         return ResponseEntity.ok(res);
-    }
-
-
-    public TestJson entityToTestJson(TestEntity testEntity, long projectId) {
-        return new TestJson(
-                ApiRoutes.PROJECT_BASE_PATH + "/" + projectId,
-                testEntity.getDockerImage(),
-                ApiRoutes.PROJECT_BASE_PATH + "/" + projectId + "/tests/dockertest",
-                ApiRoutes.PROJECT_BASE_PATH + "/" + projectId + "/tests/structuretest"
-        );
     }
 
     /**
@@ -225,20 +189,13 @@ public class TestController {
     }
 
     public ResponseEntity<?> getTestFileResponseEnity(long projectId, Auth auth, Function<TestEntity, Long> testFileIdGetter) {
-        long userId = auth.getUserEntity().getId();
-        if (!projectRepository.adminOfProject(projectId, userId) && auth.getUserEntity().getRole() != UserRole.admin){
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).body("You aren't part of this project");
+        CheckResult<TestEntity> projectCheck = testUtil.getTestIfAdmin(projectId, auth.getUserEntity());
+        if (!projectCheck.getStatus().equals(HttpStatus.OK)) {
+            return ResponseEntity.status(projectCheck.getStatus()).body(projectCheck.getMessage());
         }
-        Optional<ProjectEntity> projectEntity = projectRepository.findById(projectId);
-        if (projectEntity.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Project not found with id: " + projectId);
-        }
-        long testId = projectEntity.get().getTestId();
-        Optional<TestEntity> testEntity = testRepository.findById(testId);
-        if (testEntity.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("No tests found for project with id: " + projectId);
-        }
-        long testFileId = testFileIdGetter.apply(testEntity.get());
+        TestEntity testEntity = projectCheck.getData();
+
+        long testFileId = testFileIdGetter.apply(testEntity);
         Optional<FileEntity> fileEntity = fileRepository.findById(testFileId);
         if (fileEntity.isEmpty()) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND).body("No file found for test with id: " + testFileId);
@@ -252,7 +209,7 @@ public class TestController {
 
     /**
      * Function to delete the tests of a project
-     * @param testId the id of the test to delete
+     * @param projectId the id of the test to delete
      * @param auth the authentication object of the requesting user
      * @HttpMethod DELETE
      * @ApiDog <a href="https://apidog.com/apidoc/project-467959/api-5724189">apiDog documentation</a>
@@ -260,31 +217,21 @@ public class TestController {
      * @ApiPath /api/projects/{projectid}/tests
      * @return ResponseEntity
      */
-    @DeleteMapping(ApiRoutes.TEST_BASE_PATH + "/{testId}")
+    @DeleteMapping(ApiRoutes.PROJECT_BASE_PATH + "/{projectid}/tests")
     @Roles({UserRole.teacher, UserRole.student})
-    public ResponseEntity<?> deleteTestById(@PathVariable("testId") long testId, Auth auth) {
-        // Get the submission entry from the database
-        TestEntity testEntity = testRepository.findById(testId).orElse(null);
-        if (testEntity == null) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(null);
+    public ResponseEntity<?> deleteTestById(@PathVariable("projectid") long projectId, Auth auth) {
+        CheckResult<Pair<TestEntity, ProjectEntity>> updateCheckResult = testUtil.checkForTestUpdate(projectId, auth.getUserEntity(), null, null, null, HttpMethod.DELETE);
+        if (!updateCheckResult.getStatus().equals(HttpStatus.OK)) {
+            return ResponseEntity.status(updateCheckResult.getStatus()).body(updateCheckResult.getMessage());
         }
-        CourseEntity courseEntity = courseRepository.findCourseEntityByTestId(testId).get(0);
-        if (courseEntity == null) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Course not found");
+        ProjectEntity projectEntity = updateCheckResult.getData().getSecond();
+        TestEntity testEntity = updateCheckResult.getData().getFirst();
+
+        CheckResult<Void> deleteResult = commonDatabaseActions.deleteTestById(projectEntity, testEntity);
+        if (!deleteResult.getStatus().equals(HttpStatus.OK)) {
+            return ResponseEntity.status(deleteResult.getStatus()).body(deleteResult.getMessage());
         }
-        if(auth.getUserEntity().getRole()!= UserRole.admin) {
-            Optional<CourseUserEntity> courseUserEntity = courseUserRepository.findByCourseIdAndUserId(courseEntity.getId(), auth.getUserEntity().getId());
-            if (courseUserEntity.isEmpty()) {
-                return ResponseEntity.status(HttpStatus.NOT_FOUND).body("User not found in course");
-            }
-            Permission permission = PermissionHandler.userIsCourseAdmin(courseUserEntity.get());
-            if (!permission.hasPermission()) {
-                return permission.getResponseEntity();
-            }
-        }
-        testRepository.delete(testEntity);
-        fileController.deleteFileById(testEntity.getStructureTestId());
-        fileController.deleteFileById(testEntity.getDockerTestId());
+
         return  ResponseEntity.ok().build();
     }
 }
